correzione bug minori